--- a/ultralytics/ultralytics/cfg/datasets/kari_objects_33cls.yaml
+++ b/ultralytics/ultralytics/cfg/datasets/kari_objects_33cls.yaml
@@ -5,7 +5,7 @@
 # ├── ultralytics/datasets/kari_objects_33cls
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
-path: ./kari_objects_33cls # dataset root dir
+path: ../ultralytics/datasets/kari_objects_33cls_mini # dataset root dir
 train: train/images # train images 
 val: val/images # val images 
 
